--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     
     implementation 'com.google.firebase:firebase-analytics'
+    
+    implementation project(':react-native-splash-screen')
 
     implementation 'com.google.firebase:firebase-auth'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
