--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "^2.0.0-rc.2",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0"
+    "react-native-screens": "~2.15.0",
+    "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.18.0",
