--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-toast-message": "^1.4.3"
+    "react-native-toast-message": "^1.4.3",
+    "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
