--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "*",
+    "eslint": "^7.21.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "~1.8.0",
@@ -36,7 +37,9 @@
     "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
