--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.21.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "^2.0.0-rc.2",
     "react-native-safe-area-context": "3.1.9",
