--- a/package.json
+++ b/package.json
@@ -14,27 +14,28 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-firebase/app": "^10.5.0",
-    "@react-native-firebase/auth": "^10.5.1",
-    "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/material-bottom-tabs": "^5.3.13",
-    "@react-navigation/native": "^5.9.0",
+    "@react-native-firebase/app": "^11.1.2",
+    "@react-native-firebase/auth": "^11.1.2",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "*",
-    "eslint": "^7.21.0",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-fast-image": "^8.3.4",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "^2.0.0-rc.2",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "eslint": "^7.22.0",
+    "fbjs": "^3.0.0",
+    "react": "17.0.1",
+    "react-native": "^0.64.0",
+    "react-native-gesture-handler": "~1.10.3",
+    "react-native-modal": "^11.7.0",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~2.18.1",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-toast-message": "^1.4.3",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-toast-message": "^1.4.9",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.13.10",
+    "@babel/runtime": "^7.13.10",
     "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
@@ -42,8 +43,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "16.13.1"
+    "metro-react-native-babel-preset": "^0.65.2",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
