--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cameraroll": "^4.0.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^11.1.2",
@@ -26,6 +27,7 @@
     "react-native": "^0.64.0",
     "react-native-gesture-handler": "~1.10.3",
     "react-native-modal": "^11.7.0",
+    "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~2.18.1",
