--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "*",
     "eslint": "^7.22.0",
     "fbjs": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "^0.64.0",
     "react-native-gesture-handler": "~1.10.3",
