--- a/package.json
+++ b/package.json
@@ -14,37 +14,40 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-firebase/app": "^11.1.2",
-    "@react-native-firebase/auth": "^11.1.2",
-    "@react-native-firebase/storage": "^11.2.0",
+    "@react-native-firebase/app": "^11.4.1",
+    "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-firebase/storage": "^11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "*",
-    "eslint": "^7.22.0",
+    "@react-navigation/stack": "^5.14.4",
+    "eslint": "^7.26.0",
     "fbjs": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-native": "^0.64.0",
+    "react-native": "^0.64.1",
     "react-native-gesture-handler": "~1.10.3",
-    "react-native-image-picker": "^3.3.2",
-    "react-native-modal": "^11.7.0",
-    "react-native-permissions": "^3.0.1",
+    "react-native-image-picker": "^3.5.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.10.0",
+    "react-native-permissions": "^3.0.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~2.18.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/runtime": "^7.13.10",
+    "@babel/core": "^7.14.0",
+    "@babel/runtime": "^7.14.0",
     "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.2",
     "react-test-renderer": "17.0.1"
