--- a/ios/Dday_Notifier/Info.plist
+++ b/ios/Dday_Notifier/Info.plist
@@ -74,6 +74,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Caveat-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
