--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "^0.64.1",
+    "react-native-calendars": "^1.1261.0",
     "react-native-gesture-handler": "~1.10.3",
     "react-native-image-picker": "^3.5.0",
     "react-native-linear-gradient": "^2.5.6",
