--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-picker": "^3.5.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.10.0",
+    "react-native-paper": "^4.8.1",
     "react-native-permissions": "^3.0.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.2.0",
